<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biruabu">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="183dp"
        android:src="@drawable/info6"
        android:contentDescription="Logo aplikasi"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Scroll View -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Deskripsi Aplikasi -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FAFAFA"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titleDeskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Deskripsi Aplikasi"
                        android:textColor="@color/ungumuda"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/deskripsi_home"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Sumber dan Link Dataset -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardDataset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FAFAFA"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/dataset_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="Sumber dan Link Dataset"
                        android:textColor="#AD5E76CC"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dataset_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/sumber_dataset"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dataset_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autoLink="web"
                        android:fontFamily="sans-serif"
                        android:linksClickable="true"
                        android:padding="10dp"
                        android:text="https://www.kaggle.com/datasets/elakiricoder/gender-classification-dataset"
                        android:textAlignment="center"
                        android:textColor="#1E88E5"
                        android:textIsSelectable="true"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Tujuan Aplikasi -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardTujuanAplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FAFAFA"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titleTujuanAplikasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tujuan Aplikasi"
                        android:textColor="#AD5E76CC"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descTujuanAplikasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/tujuan_aplikasi"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Cara Menggunakan Aplikasi -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardCaraPenggunaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="#FAFAFA"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titleCaraPenggunaan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cara Menggunakan Aplikasi"
                        android:textColor="#AD5E76CC"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descCaraPenggunaan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="Langkah 1:"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/cara_penggunaan1"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="Langkah 2:"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/cara_penggunaan2"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="Langkah 3:"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/cara_penggunaan3"
                        android:textAlignment="textStart"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <!-- Footer Text -->
    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:paddingVertical="16dp"
        android:text="© FaceTraits Gender"
        android:textAlignment="center"
        android:textColor="#AAAAAA"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
